Add curl to image

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,8 +1,11 @@
 FROM grafana/grafana-arm32v7-linux:6.4.4
 # https://hub.docker.com/r/grafana/grafana/tags/
 
+USER root
 RUN apk update && \
-    apk install curl
+    apk add curl
+
+USER grafana
 
 COPY docker-entrypoint.sh /etc/grafana/docker-entrypoint.sh
 COPY datasources /etc/grafana/datasources/
